[package]
name = "nctume_ddns"
version = "0.2.0"
authors = ["Leo <leo881003@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "^0.4.6", features = ["serde"] }
env_logger = "0.7.1"
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "^1.0.90", features = ["derive"] }
serde_json = "^1.0.39"
toml = "^0.5"
log = "^0.4"
tokio = { version = "0.2.16", features = ["macros"] }

